# timing-acoustic-keyboard-recognition

./: .gitignore  COMMANDS.md  LICENSE  MASTER_TODO.md  README.md  keyboard_timing_acoustic_project_plan.md  pyproject.toml  requirements-ml.txt  requirements.txt
configs/: default.yaml
prompts/: README.md  english_phrases.txt  isolated_keys.txt  letter_mixes.txt  random_strings.txt  single_letters.txt  synthetic_passwords.txt  underused_key_words.txt
scripts/: align_trials.py  check_setup.py  collect_trials.py  collect_trials_web.py  create_environment.sh  evaluate_segmentation.py  extract_clips.py  generate_spectrograms.py  run_acoustic_demo.py  run_neural_segmenter.py  run_tests.sh  train_acoustic_baseline.py  train_acoustic_cnn.py  train_neural_segmenter.py  visualize_acoustic_model.py
src/keyboard_fusion/: __init__.py  acoustic_cnn.py  acoustic_demo_server.py  acoustic_inference.py  acoustic_model.py  acoustic_visualization.py  alignment.py  collection.py  collection_app.py  config.py  neural_segmentation.py  paths.py  preprocessing.py  segmentation.py  segmentation_evaluation.py  spectrograms.py  timing_features.py  (+1 more)
tests/: test_acoustic_cnn.py  test_acoustic_demo_server.py  test_acoustic_inference.py  test_acoustic_model.py  test_acoustic_visualization.py  test_alignment.py  test_collection.py  test_neural_segmentation.py  test_preprocessing.py  test_segmentation.py  test_spectrograms.py  test_timing_features.py  test_web_collection_server.py
web/: acoustic_demo.css  acoustic_demo.html  acoustic_demo.js  collector.css  collector.html  collector.js
